# rtkgps-1

./: .gitignore  ChangeLog  INSTALL  Makefile.in  NEWS  README  configure  configure.ac  gpsfmt.c  gpsfmt.h  rtkcom.c  rtkcom.h  rtkgps.1  rtkgps.c  rtkgps_0.07.orig.tar.gz.delta  rtkgps_0.07.orig.tar.gz.id  rtknmea  rtknmea.1  serial.c  serial.h  ww15mgh.dat.bz2
debian/: changelog  control  copyright  rules
debian/patches/: 0001-feature-extended-formats.patch  series
